add responsive design

--- a/include/styles/main_style.sass
+++ b/include/styles/main_style.sass
@@ -60,10 +60,9 @@ header
 	clear: both
 
 main
-	width: $width
-	margin: 0 auto
-
 	.post
+		margin: 0 auto
+		width: $width
 		background: white
 		padding-bottom: 80px
 		margin-bottom: 50px
@@ -167,7 +166,7 @@ main
 			color: white
 
 footer
-	height: 530px
+	padding-bottom: 40px
 	width: 100%
 	background: #5c6bc0
 	margin-top: 120px
