--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8" name="viewport" content="width=1050">
 	<title>{{{ title }}}</title>
+	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="../styles/main_style.css">
 	<link rel="stylesheet" href="../styles/post_style.css">
